syntax = "proto3";

service UserManagement {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc IssueUserToken (IssueUserTokenRequest) returns (IssueUserTokenResponse) {}
    rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
}

message RegisterUserRequest {
    string Email = 1;
    string Password = 2;
    string FirstName = 3;
    string LastName = 4;
    string LicenseId = 5;
}

message RegisterUserResponse {
    bool Successful = 1;
    string Token = 2;
}

message IssueUserTokenRequest {
    string UserId = 1;
    string Password = 2;
}

message IssueUserTokenResponse {
    bool Successful = 1;
    string Token = 2;
}

message AuthenticateUserRequest {
    string Token = 1;
}

message AuthenticateUserResponse {
    bool Authenticated = 1;
    string UserId = 2;
    string Role = 3;
}
